# scraper-bot

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  scraper_holland2stay.py  telegram.py  utiles.py
core/: run.py  settings.py
scrapers/: holland2stay.py
telegram/: bot_handler.py
utiles/: city.py
